--- a/src/App.scss
+++ b/src/App.scss
@@ -69,7 +69,7 @@ html {
 body {
   box-sizing: border-box;
   padding: 0;
-
+  font-family: "Lato", sans-serif;
   @include respond(tab-port) {
     padding: 0;
   }
