--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -12,11 +12,14 @@
     display: flex;
     font-size: 1.8rem;
     text-transform: capitalize;
+    .subnavbar__elements {
+      margin-right: 2rem;
+      // border: 1px solid red;
+    }
     a {
       text-decoration: none;
-      margin-right: 1.5rem;
       color: black;
-      font-weight: 500;
+      font-weight: bold;
       cursor: pointer;
     }
   }
