--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,16 +1,34 @@
 .header {
   //   border: 1px solid red;
+  padding: 4rem;
   display: flex;
   //! Left
   &__left {
     // border: 1px solid blue;
     width: 50%;
-    .header__heading {
-      border: 1px solid red;
-      transform: translate(10%, 60%);
-      font-size: 6rem;
-      span {
-        display: block;
+    &--box {
+      padding: 5rem 10rem;
+      // border: 2px solid red;
+      transform: translateY(15%);
+      .header__heading {
+        // border: 1px solid red;
+        font-size: 6rem;
+        span {
+          display: block;
+          color: #0071bc;
+        }
+        margin-bottom: 3rem;
+      }
+      .resume {
+        font-size: 2rem;
+        width: 30%;
+        text-align: center;
+        background-color: #0071bc;
+        color: white;
+        text-decoration: none;
+        padding: 1rem 2rem;
+        border-radius: 5px;
+        cursor: pointer;
       }
     }
   }
@@ -21,7 +39,7 @@
     display: flex;
     justify-content: center;
     img {
-      width: 50rem;
+      width: 40rem;
     }
   }
 }
