about section implemented

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -21,6 +21,10 @@
       color: black;
       font-weight: bold;
       cursor: pointer;
+      transition: all 0.2s;
+      &:hover {
+        @include defaultShadow;
+      }
     }
   }
 }
