--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,16 +1,29 @@
 @import "../../styles/style";
 .about {
-  border: 1px solid red;
+  // border: 1px solid red;
   padding: 4rem 6rem;
   &__left {
+    display: flex;
+    justify-content: center;
     width: 50%;
-    border: 1px solid blue;
+    // border: 1px solid blue;
     img {
       width: 30rem;
-      align-items: center;
+      @include defaultShadow;
     }
   }
   &__right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 50%;
+    // border: 1px solid black;
+    .para_heading {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+    p {
+      font-size: 2rem;
+    }
   }
 }
