--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,7 +2,7 @@
 
 .header {
   //   border: 1px solid red;
-  padding: 4rem;
+  padding: 12rem 4rem 4rem 4rem;
   display: flex;
   //! Left
   &__left {
