--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -6,6 +6,9 @@
   color: black;
   justify-content: space-between;
   padding: 4rem 6rem;
+  position: fixed;
+  width: 100%;
+  z-index: 2;
   @include defaultShadow;
 
   .subnavbar {
