--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -31,6 +31,10 @@
         padding: 1rem 2rem;
         border-radius: 5px;
         cursor: pointer;
+        transition: all 0.2s;
+        &:hover {
+          @include defaultShadow;
+        }
       }
     }
   }
