--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,6 +18,7 @@ $color-primary: #0071bc;
   text-align: center;
   text-decoration: underline;
   margin-bottom: 2rem;
+  font-weight: bold;
 }
 
 .section_box {
