--- a/src/App.scss
+++ b/src/App.scss
@@ -64,6 +64,8 @@ html {
   @include respond(big-desktop) {
     font-size: 75%; //1 rem = 12px, 12/16 = 75%;
   }
+
+  scroll-behavior: smooth;
 }
 
 body {
