--- a/src/components/education/education.scss
+++ b/src/components/education/education.scss
@@ -1,20 +1,34 @@
+@import "../../styles/style";
+
 .education {
-  padding: 5rem;
+  padding: 8rem;
   &__left {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 50%;
-    border: 1px solid red;
+    // border: 1px solid red;
+    .degree_name {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+    .college_name {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    .year {
+      font-size: 1.5rem;
+    }
   }
   &__right {
     width: 50%;
-    border: 1px solid blue;
+    // border: 1px solid blue;
     display: flex;
     justify-content: center;
     img {
       width: 100%;
       border-radius: 5px;
+      @include defaultShadow;
     }
   }
 }
