--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -1,2 +1,19 @@
+@import "../../styles/style";
 .skills {
+  padding: 8rem;
+  &__left {
+    width: 50%;
+    border: 1px solid red;
+  }
+  &__right {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    // border: 1px solid blue;
+    img {
+      width: 100%;
+      border-radius: 5px;
+      @include defaultShadow;
+    }
+  }
 }
