--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,16 +11,29 @@ $color-primary: #0071bc;
 
 // ? Section heading
 
+section {
+  border: 1px solid red;
+  padding: 5rem 10rem;
+}
+
 .section_heading {
   text-transform: capitalize;
   color: $color-primary;
   font-size: 3.5rem;
   text-align: center;
   text-decoration: underline;
-  margin-bottom: 4rem;
+  margin-bottom: 5rem;
   font-weight: bold;
 }
 
-.section_box {
+.section__container {
   display: flex;
+  &--left {
+    width: 50%;
+    border: 1px solid black;
+  }
+  &--right {
+    width: 50%;
+    border: 2px solid pink;
+  }
 }
