--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -34,6 +34,9 @@ section {
   }
   &--right {
     width: 50%;
-    border: 2px solid pink;
+    border: 1px solid pink;
+    img {
+      width: 100%;
+    }
   }
 }
