--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -1,13 +1,10 @@
 @import "../../styles/style";
 .skills {
-  &__left {
-    width: 50%;
-    border: 1px solid red;
+  .left {
   }
-  &__right {
+  .right {
     display: flex;
     justify-content: center;
-    width: 50%;
     // border: 1px solid blue;
     img {
       width: 100%;
