--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,7 +12,7 @@ $color-primary: #0071bc;
 // ? Section heading
 
 section {
-  border: 1px solid red;
+  // border: 1px solid red;
   padding: 5rem 10rem;
 }
 
@@ -30,13 +30,8 @@ section {
   display: flex;
   &--left {
     width: 50%;
-    border: 1px solid black;
   }
   &--right {
     width: 50%;
-    border: 1px solid pink;
-    img {
-      width: 100%;
-    }
   }
 }
