--- a/src/components/experience/experience.scss
+++ b/src/components/experience/experience.scss
@@ -1,104 +1,43 @@
-.timeline {
-  background: var(--primary-color);
-  margin: 20px auto;
-  padding: 20px;
-}
-
-/* Card container */
-.card {
-  position: relative;
-  max-width: 50%;
-}
-
-/* setting padding based on even or odd */
-.card:nth-child(odd) {
-  padding: 30px 0 30px 30px;
-}
-.card:nth-child(even) {
-  padding: 30px 30px 30px 0;
-}
-/* Global ::before */
-.card::before {
-  content: "";
-  position: absolute;
-  width: 50%;
-  border: solid orangered;
-}
-
-/* Setting the border of top, bottom, left */
-.card:nth-child(odd)::before {
-  left: 0px;
-  top: -4.5px;
-  bottom: -4.5px;
-  border-width: 5px 0 5px 5px;
-  border-radius: 50px 0 0 50px;
-}
-
-/* Setting the border of top, bottom, right */
-.card:nth-child(even)::before {
-  right: 0;
-  top: 0;
-  bottom: 0;
-  border-width: 5px 5px 5px 0;
-  border-radius: 0 50px 50px 0;
-}
-
-/* Removing the border if it is the first card */
-.card:first-child::before {
-  border-top: 0;
-  border-top-left-radius: 0;
-}
-
-/* Removing the border if it is the last card  and it's odd */
-.card:last-child:nth-child(odd)::before {
-  border-bottom: 0;
-  border-bottom-left-radius: 0;
-}
-
-/* Removing the border if it is the last card  and it's even */
-.card:last-child:nth-child(even)::before {
-  border-bottom: 0;
-  border-bottom-right-radius: 0;
-}
-
-/* Information about the timeline */
-.info {
-  display: flex;
-  flex-direction: column;
-  background: #333;
-  color: gray;
-  border-radius: 10px;
-  padding: 10px;
-}
-
-/* Title of the card */
-.title {
-  color: orangered;
-  position: relative;
-}
-
-/* Timeline dot  */
-.title::before {
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background: white;
-  border-radius: 999px;
-  border: 3px solid orangered;
-}
-
-/* text right if the card is even  */
-.card:nth-child(even) > .info > .title {
-  text-align: right;
-}
-
-/* setting dot to the left if the card is odd */
-.card:nth-child(odd) > .info > .title::before {
-  left: -45px;
-}
-
-/* setting dot to the right if the card is odd */
-.card:nth-child(even) > .info > .title::before {
-  right: -45px;
+@import "../../styles/style";
+.experience {
+  .timeline {
+    // border: 1px solid red;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    .experiene__box {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 40rem;
+      height: 15rem;
+      background-color: white;
+      padding: 1rem;
+      border-radius: 5px;
+      @include defaultShadow;
+      .title {
+        font-size: 2rem;
+      }
+      .timePeriod {
+        font-size: medium;
+        font-weight: bold;
+      }
+      p {
+        font-size: 1.5rem;
+      }
+    }
+    .ex__1 {
+      margin-top: 5rem;
+      margin-right: 2rem;
+    }
+    .ex__2 {
+      margin-top: 20rem;
+      margin-left: 2rem;
+    }
+    .line {
+      width: 5px;
+      height: 40rem;
+      background-color: $color-primary;
+    }
+  }
 }
