--- a/src/components/experience/experience.scss
+++ b/src/components/experience/experience.scss
@@ -14,6 +14,7 @@
       background-color: white;
       padding: 1rem;
       border-radius: 5px;
+      border: 3px solid $color-primary;
       @include defaultShadow;
       .title {
         font-size: 2rem;
@@ -35,7 +36,7 @@
       margin-left: 2rem;
     }
     .line {
-      width: 5px;
+      width: 6px;
       height: 40rem;
       background-color: $color-primary;
     }
