--- a/src/containers/skills/skills.scss
+++ b/src/containers/skills/skills.scss
@@ -1,5 +1,4 @@
-@import "../../styles/style";
-@import "../../styles/utilities";
+@import "../../sass/main.scss";
 .skills {
   .left {
     display: flex;
