--- a/src/containers/header/header.scss
+++ b/src/containers/header/header.scss
@@ -1,4 +1,4 @@
-@import "../../styles/style";
+@import "../../sass/main.scss";
 .header {
   //   border: 1px solid red;
   padding: 12rem 4rem 4rem 4rem;
