--- a/src/containers/learning/learning.scss
+++ b/src/containers/learning/learning.scss
@@ -1,10 +1,4 @@
-.learning {
-  .detail__box {
-    display: flex;
-    border: 1px solid red;
-    text-align: center;
-    .details {
-      font-size: 2rem;
-    }
-  }
+.row {
+  display: flex;
+  justify-content: space-around;
 }
