--- a/src/containers/footer/footer.scss
+++ b/src/containers/footer/footer.scss
@@ -1,6 +1,11 @@
+@import "../../sass/main.scss";
+
 .footer {
   color: white;
   padding: 6rem 12rem;
+  @include respond(tab-port) {
+    padding: 3rem 6rem;
+  }
   text-align: center;
   background-color: #0e2431;
   .footer_heading {
