--- a/src/containers/education/education.scss
+++ b/src/containers/education/education.scss
@@ -1,11 +1,18 @@
 @import "../../sass/main.scss";
 .education {
   padding: 8rem;
+  @include respond(tab-port) {
+    padding: 2rem;
+    text-align: center;
+  }
   .left {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 50%;
+    @include respond(tab-port) {
+      width: 100%;
+    }
     // border: 1px solid red;
     .degree_name {
       font-size: 3rem;
@@ -21,6 +28,9 @@
   }
   .right {
     width: 50%;
+    @include respond(tab-port) {
+      width: 100%;
+    }
     // border: 1px solid blue;
     display: flex;
     justify-content: center;
@@ -28,6 +38,9 @@
       width: 100%;
       border-radius: 5px;
       @include defaultShadow;
+      @include respond(tab-port) {
+        margin-top: 4rem;
+      }
     }
   }
 }
