--- a/src/containers/skills/skills.scss
+++ b/src/containers/skills/skills.scss
@@ -7,6 +7,9 @@
     // border: 1px solid blue;
     .skills__box {
       padding: 3rem;
+      @include respond(tab-port) {
+        padding: 0;
+      }
       font-size: 2rem;
       // border: 1px solid red;
       .skill__data {
@@ -56,6 +59,9 @@
       width: 100%;
       border-radius: 5px;
       @include defaultShadow;
+      @include respond(tab-port) {
+        margin-top: 4rem;
+      }
     }
   }
 }
