hooks functionality to nav

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -11,8 +11,47 @@
   z-index: 2;
   @include defaultShadow;
 
+  .mobile__menu {
+    display: none;
+    font-size: 2rem;
+    cursor: pointer;
+    position: relative;
+    &--list {
+      position: absolute;
+      background-color: white;
+      border-radius: 1rem;
+      // border: 1px solid red;
+      margin-top: 3rem;
+      top: 0;
+      right: 0;
+      @include defaultShadow;
+      padding: 1rem;
+      a {
+        text-decoration: none;
+        color: black;
+        text-transform: uppercase;
+      }
+    }
+    &--elements {
+      padding: 2rem;
+    }
+    @include respond(tab-port) {
+      display: block;
+    }
+  }
+
+  .lights {
+    font-size: 2rem;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
   .subnavbar {
     display: flex;
+    @include respond(tab-port) {
+      display: none;
+    }
     font-size: 1.6rem;
     text-transform: capitalize;
     .subnavbar__elements {
