--- a/src/containers/experience/experience.scss
+++ b/src/containers/experience/experience.scss
@@ -1,45 +1,12 @@
 @import "../../sass/main.scss";
 
 .experience {
-  .timeline {
-    // border: 1px solid red;
-    padding: 2rem;
-    display: flex;
-    justify-content: center;
-    .experiene__box {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      width: 40rem;
-      height: 15rem;
-      background-color: white;
-      padding: 1rem;
-      border-radius: 5px;
-      border: 3px solid $color-primary;
-      @include defaultShadow;
-      .title {
-        font-size: 2rem;
-      }
-      .timePeriod {
-        font-size: medium;
-        font-weight: bold;
-      }
-      p {
-        font-size: 1.5rem;
-      }
-    }
-    .ex__1 {
-      margin-top: 5rem;
-      margin-right: 2rem;
-    }
-    .ex__2 {
-      margin-top: 20rem;
-      margin-left: 2rem;
-    }
-    .line {
-      width: 6px;
-      height: 40rem;
-      background-color: $color-primary;
+  .line {
+    width: 15px;
+    height: 40rem;
+    background-color: $color-primary;
+    @include respond(tab-port) {
+      display: none;
     }
   }
 }
